--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yourusername.github.io/repository-name/",
+  "homepage": "https://mahume.github.io/weather-app/",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
